--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Russell Campbell Designs</title>
+  <title>Russell Campbell Designs WIP</title>
   <link href="img/rc_fav.ico" rel="shortcut icon">
 </head>
 
