Revert "Updated title of main page"
This reverts commit 32c78acc6d9a07abef3f33e3ad3ddfd4df2f7843.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Russell Campbell Designs WIP</title>
+  <title>Russell Campbell Designs</title>
   <link href="img/rc_fav.ico" rel="shortcut icon">
 </head>
 
