--- a/taxpert.html
+++ b/taxpert.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Russell Campbell Branding & Design</title>
+  <title>Russell Campbell Designs - About Me</title>
   <link href="img/rc_fav.ico" rel="shortcut icon">
 </head>
 
@@ -21,56 +21,50 @@
   </header>
   <main>
     <div>
-      <h1>Hi, My name is Russell Campbell.
-        <span>I'm a UX researcher and designer from Kentucky!</span>
-      </h1>
-      <p></p>
+      <div>
+        <h1>About Me</h1>
+      </div>
     </div>
     <div>
       <div>
-        <h2>My work</h2>
+        <picture>
+          <source srcset="img/Russell_Smaller.JPG" media="(max-width:767px)">
+          <img src="img/Russell.JPG" alt="My Image">
+        </picture>
         <div>
           <div>
-            <div>
-              <picture>
-                <source srcset="img/Fresh/freshtools_smaller.JPG" media="(max-width:767px)">
-                <img src="img/Fresh/freshtools.JPG" alt="My Image">
-              </picture>
-            </div>
-            <div>
-              <h3>Fresh Tools</h3>
-              <p>
-                Fresh Tools is a platform to help restaurants operate more efficiently.
-              </p>
-              <p>
-                The platform includes vvarious tools such as a digital KDS, Time Tracker, Recipe Manager, and more!  I did all of the UX/UI and branding for Fresh Tools.
-              </p>
-              <a href="">Read more</a>
-            </div>
+            <h2>My Story</h2>
+            <p>My design story started at age 8 - making awful CD covers to crudely slap onto my arguably even more awful mixed CDs in the year 2000. It continued into my high school years, where I designed t-shirts, posters, MySpace layouts, and indeed CD covers for my band. I played the bass, but it became quickly apparent that my design skills exceeded my bass playing. </p>
+            <p>The story paused for a few years while floundered at the University of Kentucky, where my 2.2 GPA reflected my disinterest and lack of direction. One day, after a particularly grueling calculus class (I was pursuing a degree in Engineering at the time, a laughable attempt looking back), I decided I had had enough, and knew that if I didn’t pursue my dream of being professional designer, I would always regret it. I did my research, I looked around, and I found myself at Eastern Kentucky University the next semester, focused, driven, and ready to take on what everyone assured me would not be a lucrative career. My 3.9 GPA, success in the curriculum, and eventual landing of a great job with growth opportunities would suggest otherwise – and here I am today.</p>
+            <a href="files/resume.pdf" download>Download my cv</a>
           </div>
           <div>
+            <h2>Skills & Tools</h2>
             <div>
-              <picture>
-                <source srcset="img/Taxpert/taxpert_smaller.JPG" media="(max-width:767px)">
-                <img src="img/Taxpert/Taxpert.JPG" alt="My Image">
-              </picture>
-            </div>
-            <div>
-              <h3>Taxpert</h3>
-              <p>
-                Taxpert is the industry leader in online tax advice.
-              </p>
-              <p>
-                With Taxpert you can reach our to our accounting experts 24/7.  I did all of the branding and UX/UI.
-              </p>
-              <a href="">Read more</a>
+              <div>
+                <h3>Relevant Skills</h3>
+                <ul>
+                  <li>Detail Oriented</li>
+                  <li>Creative</li>
+                  <li>Hard Working</li>
+                </ul>
+              </div>
+              <div>
+                <h3>Tools I Use</h3>
+                <ul>
+                  <li>Adobe Illustrator</li>
+                  <li>Pen & Paper</li>
+                  <li>Hammers</li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
-        </div>
       </div>
+    </div>
   </main>
-  <footer id="contact">
+
+  <footer>
     <div>
       <h2>Get in Touch</h2>
       <p>
