--- a/taxpert.html
+++ b/taxpert.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Russell Campbell Designs - About Me</title>
+  <title>Russell Campbell Designs - Taxpert</title>
   <link href="img/rc_fav.ico" rel="shortcut icon">
 </head>
 
@@ -22,21 +22,21 @@
   <main>
     <div>
       <div>
-        <h1>About Me</h1>
+        <h1>Taxpert</h1>
       </div>
     </div>
     <div>
       <div>
         <picture>
-          <source srcset="img/Russell_Smaller.JPG" media="(max-width:767px)">
-          <img src="img/Russell.JPG" alt="My Image">
+          <source srcset="img/Taxpert/taxpert_smaller.JPG" media="(max-width:767px)">
+          <img src="img/Taxpert/taxpert.JPG" alt="My Image">
         </picture>
         <div>
           <div>
-            <h2>My Story</h2>
-            <p>My design story started at age 8 - making awful CD covers to crudely slap onto my arguably even more awful mixed CDs in the year 2000. It continued into my high school years, where I designed t-shirts, posters, MySpace layouts, and indeed CD covers for my band. I played the bass, but it became quickly apparent that my design skills exceeded my bass playing. </p>
-            <p>The story paused for a few years while floundered at the University of Kentucky, where my 2.2 GPA reflected my disinterest and lack of direction. One day, after a particularly grueling calculus class (I was pursuing a degree in Engineering at the time, a laughable attempt looking back), I decided I had had enough, and knew that if I didn’t pursue my dream of being professional designer, I would always regret it. I did my research, I looked around, and I found myself at Eastern Kentucky University the next semester, focused, driven, and ready to take on what everyone assured me would not be a lucrative career. My 3.9 GPA, success in the curriculum, and eventual landing of a great job with growth opportunities would suggest otherwise – and here I am today.</p>
-            <a href="files/resume.pdf" download>Download my cv</a>
+            <h2>UX/UI Design</h2>
+            <p>Taxpert is the industry leader in online tax advice. </p>
+            <p>I worked with the development team to establish brand standards, and created the UI/UX for the mobile app.  I worked with the front end developer to create all of the assets he required to build the interface.</p>
+            <a href="files/resume.pdf" download>Download this project case study</a>
           </div>
           <div>
             <h2>Skills & Tools</h2>
