Added a link to the taxpert project page

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <p>
                 With Taxpert you can reach our to our accounting experts 24/7.  I did all of the branding and UX/UI.
               </p>
-              <a href="">Read more</a>
+              <a href="taxpert.html">Read more</a>
             </div>
           </div>
         </div>
