Added information to the Taxpert project page

--- a/taxpert.html
+++ b/taxpert.html
@@ -39,22 +39,15 @@
             <a href="files/resume.pdf" download>Download this project case study</a>
           </div>
           <div>
-            <h2>Skills & Tools</h2>
+            <h2>Tools used for this project</h2>
             <div>
               <div>
-                <h3>Relevant Skills</h3>
                 <ul>
-                  <li>Detail Oriented</li>
-                  <li>Creative</li>
-                  <li>Hard Working</li>
-                </ul>
-              </div>
-              <div>
-                <h3>Tools I Use</h3>
-                <ul>
-                  <li>Adobe Illustrator</li>
-                  <li>Pen & Paper</li>
-                  <li>Hammers</li>
+                  <li>Sobe Illustrator</li>
+                  <li>Adobe Photoshop</li>
+                  <li>Sketch</li>
+                  <li>Atom</li>
+                  <li>Microsoft Flight Simulator</li>
                 </ul>
               </div>
             </div>
