Corrected spelling mistake

--- a/taxpert.html
+++ b/taxpert.html
@@ -43,7 +43,7 @@
             <div>
               <div>
                 <ul>
-                  <li>Sobe Illustrator</li>
+                  <li>Adobe Illustrator</li>
                   <li>Adobe Photoshop</li>
                   <li>Sketch</li>
                   <li>Atom</li>
