Added information to the Fresh Tools project page

--- a/freshtools.html
+++ b/freshtools.html
@@ -28,14 +28,14 @@
     <div>
       <div>
         <picture>
-          <source srcset="img/Taxpert/taxpert_smaller.JPG" media="(max-width:767px)">
-          <img src="img/Taxpert/taxpert.JPG" alt="My Image">
+          <source srcset="img/Fresh/freshtools_smaller.JPG" media="(max-width:767px)">
+          <img src="img/Fresh/freshtools.JPG" alt="My Image">
         </picture>
         <div>
           <div>
-            <h2>UX/UI Design</h2>
-            <p>Taxpert is the industry leader in online tax advice. </p>
-            <p>I worked with the development team to establish brand standards, and created the UI/UX for the mobile app.  I worked with the front end developer to create all of the assets he required to build the interface.</p>
+            <h2>Web App Design</h2>
+            <p>Fresh Tools is a platform to help restaurants operate more efficiently.</p>
+            <p>I completed this entire project from start to finish, from concept to functional web app.  I've had a love of restaurants my entire life, so set off to change the entire hospitality industry.  It was a huge success.  What started as a ingle person (me) has grown into oa company employing thousands.  This year we are poised to replace Apple on the list of most profitable companies.</p>
             <a href="files/resume.pdf" download>Download this project case study</a>
           </div>
           <div>
@@ -43,11 +43,11 @@
             <div>
               <div>
                 <ul>
-                  <li>Adobe Illustrator</li>
-                  <li>Adobe Photoshop</li>
-                  <li>Sketch</li>
-                  <li>Atom</li>
-                  <li>Microsoft Flight Simulator</li>
+                  <li>My Mind</li>
+                  <li>Philips Head Screwdriver</li>
+                  <li>Internet</li>
+                  <li>A Large Crane</li>
+                  <li>5 Origami Swans</li>
                 </ul>
               </div>
             </div>
