Corrected spelling mistake in link to Fresh Tools project page

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <p>
                 The platform includes vvarious tools such as a digital KDS, Time Tracker, Recipe Manager, and more!  I did all of the UX/UI and branding for Fresh Tools.
               </p>
-              <a href="freshtool.html">Read more</a>
+              <a href="freshtools.html">Read more</a>
             </div>
           </div>
           <div>
