--- a/freshtools.html
+++ b/freshtools.html
@@ -22,7 +22,7 @@
   <main>
     <div>
       <div>
-        <h1>Taxpert</h1>
+        <h1>Fresh Tools</h1>
       </div>
     </div>
     <div>
@@ -35,7 +35,7 @@
           <div>
             <h2>Web App Design</h2>
             <p>Fresh Tools is a platform to help restaurants operate more efficiently.</p>
-            <p>I completed this entire project from start to finish, from concept to functional web app.  I've had a love of restaurants my entire life, so set off to change the entire hospitality industry.  It was a huge success.  What started as a ingle person (me) has grown into oa company employing thousands.  This year we are poised to replace Apple on the list of most profitable companies.</p>
+            <p>I completed this entire project from start to finish, from concept to functional web app.  I've had a love of restaurants my entire life, so set off to change the entire hospitality industry.  It was a huge success.  What started as a single person (me) has grown into oa company employing thousands.  This year we are poised to replace Apple on the list of most profitable companies.</p>
             <a href="files/resume.pdf" download>Download this project case study</a>
           </div>
           <div>
