--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Russell Campbell Designs - About Me</title>
   <link href="img/rc_fav.ico" rel="shortcut icon">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
