--- a/taxpert.html
+++ b/taxpert.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Russell Campbell Designs - Taxpert</title>
   <link href="img/rc_fav.ico" rel="shortcut icon">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
