--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Russell Campbell Branding & Design</title>
   <link href="img/rc_fav.ico" rel="shortcut icon">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
