--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <p>
                 The platform includes vvarious tools such as a digital KDS, Time Tracker, Recipe Manager, and more!  I did all of the UX/UI and branding for Fresh Tools.
               </p>
-              <a href="freshtools.html">Read more</a>
+              <a href="freshtools.html" class="button">Read more</a>
             </div>
           </div>
           <div>
@@ -67,7 +67,7 @@
               <p>
                 With Taxpert you can reach our to our accounting experts 24/7.  I did all of the branding and UX/UI.
               </p>
-              <a href="taxpert.html">Read more</a>
+              <a href="taxpert.html" class="button">Read more</a>
             </div>
           </div>
         </div>
