Added contact button class

--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
         Prefer sending an email?
       </p>
       <div>
-        <a href="mailto:rcampbell@fresh.technoilogy">send email</a>
+        <a href="mailto:rcampbell@fresh.technoilogy" class="button contact">send email</a>
       </div>
       <div>
         <a href="http://www.twitter.com" target="_blank"><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
