--- a/freshtools.html
+++ b/freshtools.html
@@ -40,7 +40,7 @@
             <h2>Web App Design</h2>
             <p>Fresh Tools is a platform to help restaurants operate more efficiently.</p>
             <p>I completed this entire project from start to finish, from concept to functional web app.  I've had a love of restaurants my entire life, so set off to change the entire hospitality industry.  It was a huge success.  What started as a single person (me) has grown into oa company employing thousands.  This year we are poised to replace Apple on the list of most profitable companies.</p>
-            <a href="files/resume.pdf" download>Download this project case study</a>
+            <a href="files/resume.pdf"  class="button contact" download>Download this project case study</a>
           </div>
           <div>
             <h2>Tools used for this project</h2>
