--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
 <body id="about" class="subpage">
   <header id="hero">
-    <div><img src="https://pro2-bar-s3-cdn-cf1.myportfolio.com/78c2522e-83da-4c34-8a63-bdc5803c9c27/9a81e983-94b8-457a-8799-30f6fdb986e0_rwc_0x0x353x203x4096.png?h=7e7441485c7c5741e324cf8fed4ffb3a" alt="Russell Campbell">
+    <div class="container"><img src="https://pro2-bar-s3-cdn-cf1.myportfolio.com/78c2522e-83da-4c34-8a63-bdc5803c9c27/9a81e983-94b8-457a-8799-30f6fdb986e0_rwc_0x0x353x203x4096.png?h=7e7441485c7c5741e324cf8fed4ffb3a" alt="Russell Campbell">
       <nav>
         <ul>
           <li><a href="index.html">Work</a></li>
@@ -24,7 +24,7 @@
     </div>
   </header>
   <main id="content">
-    <div>
+    <div class="container">
       <div>
         <h1>About Me</h1>
       </div>
@@ -69,7 +69,7 @@
   </main>
 
   <footer id="contact">
-    <div>
+    <div class="container">
       <h2>Get in Touch</h2>
       <p>
         Do you like my work and want to discuss opportunities?
