Added row style

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
-<body id="work" class="home">
-  <header id="hero">
+<body id="mywork" class="home">
+  <header>
     <div class="container"><img src="https://pro2-bar-s3-cdn-cf1.myportfolio.com/78c2522e-83da-4c34-8a63-bdc5803c9c27/9a81e983-94b8-457a-8799-30f6fdb986e0_rwc_0x0x353x203x4096.png?h=7e7441485c7c5741e324cf8fed4ffb3a" alt="Russell Campbell">
       <nav>
         <ul>
@@ -23,17 +23,17 @@
       </nav>
     </div>
   </header>
-  <main id="content">
+  <main id="hero">
     <div class="container">
       <h1>Hi, My name is Russell Campbell.
         <span>I'm a UX researcher and designer from Kentucky!</span>
       </h1>
       <p></p>
     </div>
-    <div>
-      <div>
+    <div id="work">
+      <div  class="container">
         <h2>My work</h2>
-        <div>
+        <div class="row">
           <div>
             <div>
               <picture>
