Added navigation styling and centered heading

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body id="mywork" class="home">
   <header>
-    <div class="container"><img src="https://pro2-bar-s3-cdn-cf1.myportfolio.com/78c2522e-83da-4c34-8a63-bdc5803c9c27/9a81e983-94b8-457a-8799-30f6fdb986e0_rwc_0x0x353x203x4096.png?h=7e7441485c7c5741e324cf8fed4ffb3a" alt="Russell Campbell">
+    <div class="container"><img src="https://pro2-bar-s3-cdn-cf1.myportfolio.com/78c2522e-83da-4c34-8a63-bdc5803c9c27/9a81e983-94b8-457a-8799-30f6fdb986e0_rwc_0x0x353x203x4096.png?h=7e7441485c7c5741e324cf8fed4ffb3a" alt="Russell Campbell" class="logo">
       <nav>
         <ul>
           <li><a href="index.html">Work</a></li>
@@ -33,8 +33,8 @@
     <div id="work">
       <div  class="container">
         <h2>My work</h2>
-        <div class="row">
-          <div>
+        <div>
+          <div class="row">
             <div>
               <picture>
                 <source srcset="img/Fresh/freshtools_smaller.JPG" media="(max-width:767px)">
@@ -52,7 +52,7 @@
               <a href="freshtools.html" class="button">Read more</a>
             </div>
           </div>
-          <div>
+          <div class="row">
             <div>
               <picture>
                 <source srcset="img/Taxpert/taxpert_smaller.JPG" media="(max-width:767px)">
@@ -69,7 +69,7 @@
               </p>
               <a href="taxpert.html" class="button">Read more</a>
             </div>
-          </div>
+          </div>l
         </div>
         </div>
       </div>
