--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               </p>
               <a href="taxpert.html" class="button">Read more</a>
             </div>
-          </div>l
+          </div>
         </div>
         </div>
       </div>
