Styling page elements

--- a/freshtools.html
+++ b/freshtools.html
@@ -23,7 +23,7 @@
       </nav>
     </div>
   </header>
-  <main id="content">
+  <main id="content" class="main">
     <div class="container">
       <div>
         <h1>Fresh Tools</h1>
