--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </nav>
     </div>
   </header>
-  <main id="hero">
+  <main id="hero" class="main">
     <div class="container">
       <h1>Hi, My name is Russell Campbell.
         <span>I'm a UX researcher and designer from Kentucky!</span>
