--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
       </nav>
     </div>
   </header>
-  <main id="hero">
+  <main id="hero" class="main">
     <div class="container">
       <div>
         <h1>About Me</h1>
