--- a/about.html
+++ b/about.html
@@ -23,14 +23,14 @@
       </nav>
     </div>
   </header>
-  <main id="hero" class="main">
-    <div class="container">
+  <main class="main">
+    <div id = "hero" class="container">
       <div>
         <h1>About Me</h1>
       </div>
     </div>
-    <div>
-      <div>
+    <div id="work">
+      <div class="container">
         <picture>
           <source srcset="img/Russell_Smaller.JPG" media="(max-width:767px)">
           <img src="img/Russell.JPG" alt="My Image">
