--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       </nav>
     </div>
   </header>
-  <main id="hero" class="main">
-    <div class="container">
+  <main class="main">
+    <div id="hero" class="container">
       <h1>Hi, My name is Russell Campbell.
         <span>I'm a UX researcher and designer from Kentucky!</span>
       </h1>
