Positioning columns in layout

--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
     </div>
     <div id="work">
       <div  class="container">
-        <h2>My work</h2>
+        <h2 class="center">My work</h2>
         <div>
           <div class="row">
-            <div>
+            <div class="columnLeft">
               <picture>
                 <source srcset="img/Fresh/freshtools_smaller.JPG" media="(max-width:767px)">
                 <img src="img/Fresh/freshtools.JPG" alt="My Image">
               </picture>
             </div>
-            <div>
+            <div class="columnRight">
               <h3>Fresh Tools</h3>
               <p>
                 Fresh Tools is a platform to help restaurants operate more efficiently.
@@ -53,13 +53,13 @@
             </div>
           </div>
           <div class="row">
-            <div>
+            <div class="columnLeft">
               <picture>
                 <source srcset="img/Taxpert/taxpert_smaller.JPG" media="(max-width:767px)">
                 <img src="img/Taxpert/Taxpert.JPG" alt="My Image">
               </picture>
             </div>
-            <div>
+            <div class="columnRight">
               <h3>Taxpert</h3>
               <p>
                 Taxpert is the industry leader in online tax advice.
