--- a/about.html
+++ b/about.html
@@ -68,20 +68,20 @@
     </div>
   </main>
 
-  <footer id="contact">
-    <div class="container">
-      <h2>Get in Touch</h2>
-      <p>
+  <footer>
+    <div id="contact" class="container">
+      <h2 class="center">Get in Touch</h2>
+      <p class="center">
         Do you like my work and want to discuss opportunities?
         Please get in touch. Call: <a href="tel:+15555555">(555)555-5555</a>
         or Skype me at <a href="skype:donotskypeme.please">donotskypeme.please</a>.
         Prefer sending an email?
       </p>
-      <div>
+      <div class="center">
         <a href="mailto:rcampbell@fresh.technoilogy" class="button contact">send email</a>
       </div>
-      <div>
-        <a href="http://www.twitter.com" target="_blank"><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+      <div class="social-box">
+        <a href="http://www.twitter.com" target="_blank" class="icon"><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
         	 viewBox="0 0 112.197 112.197" style="enable-background:new 0 0 112.197 112.197;" xml:space="preserve">
         <g>
         	<circle style="fill:#55ACEE;" cx="56.099" cy="56.098" r="56.098"/>
@@ -97,7 +97,7 @@
         	</g>
         </g>
         </svg></a>
-        <a href="http://www.facebook.com" target="_blank"><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        <a href="http://www.facebook.com" target="_blank" class="icon"><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
         	 viewBox="0 0 112.196 112.196" style="enable-background:new 0 0 112.196 112.196;" xml:space="preserve">
         <g>
         	<circle style="fill:#3B5998;" cx="56.098" cy="56.098" r="56.098"/>
@@ -105,7 +105,7 @@
         		c0-5.964,2.833-15.303,15.301-15.303L71.56,21.81v12.51h-8.151c-1.337,0-3.217,0.668-3.217,3.513v7.585h11.334L70.201,58.294z"/>
         </g>
         </svg></a>
-        <a href="http://www.instagram.com" target="_blank"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        <a href="http://www.instagram.com" target="_blank" class="icon"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
         	 viewBox="0 0 89.758 89.758" style="enable-background:new 0 0 89.758 89.758;" xml:space="preserve">
         <g>
         	<path style="fill:#6A453B;" d="M58.255,23.88H31.503c-4.27,0-7.744,3.474-7.744,7.744v26.752c0,4.27,3.474,7.745,7.744,7.745
@@ -120,7 +120,7 @@
         		c-7.51,0-13.62-6.109-13.62-13.62V31.624c0-7.51,6.11-13.62,13.62-13.62h26.752c7.511,0,13.62,6.11,13.62,13.62V58.376z"/>
         </g>
         </svg></a>
-        <a href="http://www.youtube.com" target="_blank"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        <a href="http://www.youtube.com" target="_blank" class="icon"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
         	 viewBox="0 0 291.319 291.319" style="enable-background:new 0 0 291.319 291.319;" xml:space="preserve">
         <g>
         	<path style="fill:#C4302B;" d="M145.659,0c80.45,0,145.66,65.219,145.66,145.66s-65.21,145.659-145.66,145.659S0,226.1,0,145.66
@@ -157,7 +157,7 @@
         </g>
         </svg></a>
       </div>
-      <p>copyright Russell Campbell 2019</p>
+      <p class="copyright">copyright Russell Campbell 2019</p>
     </div>
   </footer>
 </body>
