--- a/freshtools.html
+++ b/freshtools.html
@@ -26,11 +26,11 @@
   <main id="content" class="main">
     <div class="container">
       <div>
-        <h1>Fresh Tools</h1>
+        <h1 class="center">Fresh Tools</h1>
       </div>
     </div>
-    <div>
-      <div>
+    <div class="container">
+      <div class="row">
         <picture>
           <source srcset="img/Fresh/freshtools_smaller.JPG" media="(max-width:767px)">
           <img src="img/Fresh/freshtools.JPG" alt="My Image">
