--- a/taxpert.html
+++ b/taxpert.html
@@ -26,11 +26,11 @@
   <main id="content" class="main">
     <div class="container">
       <div>
-        <h1>Taxpert</h1>
+        <h1 class="center">Taxpert</h1>
       </div>
     </div>
-    <div>
-      <div>
+    <div class="container">
+      <div class="row">
         <picture>
           <source srcset="img/Taxpert/taxpert_smaller.JPG" media="(max-width:767px)">
           <img src="img/Taxpert/taxpert.JPG" alt="My Image">
