COrrecting layout issues

--- a/about.html
+++ b/about.html
@@ -35,14 +35,14 @@
           <source srcset="img/Russell_Smaller.JPG" media="(max-width:767px)">
           <img src="img/Russell.JPG" alt="My Image">
         </picture>
-        <div>
-          <div>
+        <div class="row">
+          <div class="columnLeft">
             <h2>My Story</h2>
             <p>My design story started at age 8 - making awful CD covers to crudely slap onto my arguably even more awful mixed CDs in the year 2000. It continued into my high school years, where I designed t-shirts, posters, MySpace layouts, and indeed CD covers for my band. I played the bass, but it became quickly apparent that my design skills exceeded my bass playing. </p>
             <p>The story paused for a few years while floundered at the University of Kentucky, where my 2.2 GPA reflected my disinterest and lack of direction. One day, after a particularly grueling calculus class (I was pursuing a degree in Engineering at the time, a laughable attempt looking back), I decided I had had enough, and knew that if I didn’t pursue my dream of being professional designer, I would always regret it. I did my research, I looked around, and I found myself at Eastern Kentucky University the next semester, focused, driven, and ready to take on what everyone assured me would not be a lucrative career. My 3.9 GPA, success in the curriculum, and eventual landing of a great job with growth opportunities would suggest otherwise – and here I am today.</p>
             <a href="files/resume.pdf"  class="button contact" download>Download my cv</a>
           </div>
-          <div>
+          <div class="columnRight">
             <h2>Skills & Tools</h2>
             <div>
               <div>
