Update layout ans styles

--- a/freshtools.html
+++ b/freshtools.html
@@ -30,7 +30,7 @@
       </div>
     </div>
     <div class="container">
-      <div class="row">
+      <div slass="row">
         <picture>
           <source srcset="img/Fresh/freshtools_smaller.JPG" media="(max-width:767px)">
           <img src="img/Fresh/freshtools.JPG" alt="My Image">
