--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   </header>
   <main class="main">
     <div id="hero" class="container">
-      <h1>Hi, My name is Russell Campbell.
-        <span>I'm a UX researcher and designer from Kentucky!</span>
+      <h1>Russell Campbell.<br>
+        <span>UX/UI & Branding</span>
       </h1>
       <p></p>
     </div>
@@ -36,7 +36,7 @@
         <div>
           <div class="row">
             <div class="columnLeft">
-              <picture>
+              <picture class="paddedImg">
                 <source srcset="img/Fresh/freshtools_smaller.JPG" media="(max-width:767px)">
                 <img src="img/Fresh/freshtools.JPG" alt="My Image">
               </picture>
@@ -54,7 +54,7 @@
           </div>
           <div class="row">
             <div class="columnLeft">
-              <picture>
+              <picture class="paddedImg">
                 <source srcset="img/Taxpert/taxpert_smaller.JPG" media="(max-width:767px)">
                 <img src="img/Taxpert/Taxpert.JPG" alt="My Image">
               </picture>
