Adjusting columns for differene media queries

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </header>
   <main class="main">
     <div id="hero" class="container">
-      <h1>Russell Campbell.<br>
+      <h1>Russell Campbell.
         <span>UX/UI & Branding</span>
       </h1>
       <p></p>
@@ -35,13 +35,13 @@
         <h2 class="center">My work</h2>
         <div>
           <div class="row">
-            <div class="columnLeft">
+            <div class="column col-md-6 col-lg-7">
               <picture class="paddedImg">
                 <source srcset="img/Fresh/freshtools_smaller.JPG" media="(max-width:767px)">
                 <img src="img/Fresh/freshtools.JPG" alt="My Image">
               </picture>
             </div>
-            <div class="columnRight">
+            <div class="column col-md-6 col-lg-5">
               <h3>Fresh Tools</h3>
               <p>
                 Fresh Tools is a platform to help restaurants operate more efficiently.
@@ -53,13 +53,13 @@
             </div>
           </div>
           <div class="row">
-            <div class="columnLeft">
+            <div class="column col-md-6 col-lg-7">
               <picture class="paddedImg">
                 <source srcset="img/Taxpert/taxpert_smaller.JPG" media="(max-width:767px)">
                 <img src="img/Taxpert/Taxpert.JPG" alt="My Image">
               </picture>
             </div>
-            <div class="columnRight">
+            <div class="column col-md-6 col-lg-5">
               <h3>Taxpert</h3>
               <p>
                 Taxpert is the industry leader in online tax advice.
