Rmoved link to non-existent project page

--- a/index.html
+++ b/index.html
@@ -1014,7 +1014,7 @@
               <p>
                 With this illustration you can make people think you have actually been to Berlin.
               </p>
-              <a href="taxpert.html" class="button">Read more</a>
+              <a href="#" class="button">Read more</a>
             </div>
           </div>
         </div>
