--- a/taxpert.html
+++ b/taxpert.html
@@ -36,13 +36,13 @@
           <img src="img/Taxpert/taxpert.JPG" alt="My Image">
         </picture>
         <div>
-          <div>
+          <div class="column col-md-6 col-lg-7">
             <h2>UX/UI Design</h2>
             <p>Taxpert is the industry leader in online tax advice. </p>
             <p>I worked with the development team to establish brand standards, and created the UI/UX for the mobile app.  I worked with the front end developer to create all of the assets he required to build the interface.</p>
             <a href="files/resume.pdf"  class="button contact" download>Download this project case study</a>
           </div>
-          <div>
+          <div class="column col-md-6 col-lg-5">
             <h2>Tools used for this project</h2>
             <div>
               <div>
