Adding javascript include

--- a/index.html
+++ b/index.html
@@ -1113,6 +1113,7 @@
       <p class="copyright">copyright Russell Campbell 2019</p>
     </div>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
