Added scripts file with console message

--- a/index.html
+++ b/index.html
@@ -1113,7 +1113,7 @@
       <p class="copyright">copyright Russell Campbell 2019</p>
     </div>
   </footer>
-  <script src="js/script.js"></script>
+  <script src="js/scripts.js"></script>
 </body>
 
 </html>
