--- a/taxpert.html
+++ b/taxpert.html
@@ -153,6 +153,7 @@
       <p class="copyright">copyright Russell Campbell 2019</p>
     </div>
   </footer>
+  <script src="js/jquery-3.4.1.min.js"></script>
   <script src="js/script.js"></script>
 </body>
 
