--- a/index.html
+++ b/index.html
@@ -1113,7 +1113,10 @@
       <p class="copyright">copyright Russell Campbell 2019</p>
     </div>
   </footer>
-  <script src="js/jquery-3.4.1.min.js"></script>
+  <script
+    src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+    crossorigin="anonymous"></script>
   <script src="js/scripts.js"></script>
 </body>
 
