--- a/about.html
+++ b/about.html
@@ -14,14 +14,17 @@
 
 <body id="about" class="subpage">
   <header>
+    <div class="navtoggle" id="myNavToggle">
     <div class="container"><img src="https://pro2-bar-s3-cdn-cf1.myportfolio.com/78c2522e-83da-4c34-8a63-bdc5803c9c27/9a81e983-94b8-457a-8799-30f6fdb986e0_rwc_0x0x353x203x4096.png?h=7e7441485c7c5741e324cf8fed4ffb3a" alt="Russell Campbell" class="logo">
       <nav>
         <ul>
           <li><a href="index.html">Work</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="#contact">Contact</a></li>
+          <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
         </ul>
       </nav>
+    </div>
     </div>
   </header>
   <main class="main">
@@ -165,7 +168,7 @@
     src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
     crossorigin="anonymous"></script>
-  <script src="js/script.js"></script>
+  <script src="js/scripts.js"></script>
 </body>
 
 </html>
