Correcting layout of projects and SVGs

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </div>
           <div class="row" class="full-width">
             <div class="column col-md-6 col-lg-7">
-              <svg id="el_-VML_ow4G" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 414 569">
+              <svg id="el_-VML_ow4G" class="paddedImg superhero_illustration" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 700 505" preserveAspectRatio="xMinYmin meet">
                 <title>SuperHero_Scene</title>
                 <g id="el_S4jhmYoSNb_an_N_Te0KtrX" data-animator-group="true" data-animator-type="0">
                   <g id="el_S4jhmYoSNb">
@@ -183,7 +183,7 @@
           </div>
           <div class="row">
             <div class="column col-md-6 col-lg-7">
-              <svg xmlns="http://www.w3.org/2000/svg" class="paddedImg berlin-illustration" height="505" viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
+              <svg xmlns="http://www.w3.org/2000/svg" class="paddedImg berlin-illustration" viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
                     <defs>
                         <polygon id="a" points=".06 231.917 .06 .929 688.717 .929 688.717 231.917" />
                     </defs>
