--- a/about.html
+++ b/about.html
@@ -36,8 +36,8 @@
     <div id="work">
       <div class="container">
         <picture>
-          <source srcset="img/Russell_Smaller.JPG" media="(max-width:767px)">
-          <img src="img/Russell.JPG" alt="My Image">
+          <source srcset="/img/Russell_Smaller.JPG" media="(max-width:767px)">
+          <img src="/img/Russell.JPG" alt="My Image">
         </picture>
         <div class="row">
           <div class="column col-md-6 col-lg-7">
