--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
           <div class="row">
             <div class="column col-md-6 col-lg-7">
               <picture class="paddedImg">
-                <source srcset="img/Fresh/freshtools_smaller.JPG" media="(max-width:767px)">
-                <img src="img/Fresh/freshtools.JPG" alt="My Image">
+                <source srcset="/img/Fresh/freshtools_smaller.JPG" media="(max-width:767px)">
+                <img src="/img/Fresh/freshtools.JPG" alt="My Image">
               </picture>
             </div>
             <div class="column col-md-6 col-lg-5">
@@ -59,8 +59,8 @@
           <div class="row">
             <div class="column col-md-6 col-lg-7">
               <picture class="paddedImg">
-                <source srcset="img/Taxpert/taxpert_smaller.JPG" media="(max-width:767px)">
-                <img src="img/Taxpert/Taxpert.JPG" alt="My Image">
+                <source srcset="/img/Taxpert/taxpert_smaller.JPG" media="(max-width:767px)">
+                <img src="/img/Taxpert/Taxpert.JPG" alt="My Image">
               </picture>
             </div>
             <div class="column col-md-6 col-lg-5">
