--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
               <a href="taxpert.html" class="button">Read more</a>
             </div>
           </div>
-          <div class="row" class="full-width">
+          <div class="row full-width">
             <div class="column col-md-6 col-lg-7">
-              <svg id="el_-VML_ow4G" class="paddedImg superhero_illustration" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 700 505" preserveAspectRatio="xMinYmin meet">
+              <svg id="el_-VML_ow4G" class="paddedImg superhero_illustration" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 700 505" >
                 <title>SuperHero_Scene</title>
                 <g id="el_S4jhmYoSNb_an_N_Te0KtrX" data-animator-group="true" data-animator-type="0">
                   <g id="el_S4jhmYoSNb">
