Fixing hero width

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </div>
   </header>
   <main class="main">
-    <div id="hero" class="container hero">
+    <div id="hero">
       <h1>Russell Campbell.
         <span>UX/UI & Branding</span>
       </h1>
