Correcting layout of hero

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
     </div>
   </header>
   <main class="main">
-    <div id = "hero" class="container">
+    <div id = "hero">
       <div>
         <h1>About Me</h1>
       </div>
