Correcting image paths

--- a/about.html
+++ b/about.html
@@ -36,8 +36,8 @@
     <div id="work">
       <div class="container">
         <picture>
-          <source srcset="https://github.com/rcfresh/Portfolio-Site/blob/master/img/Russell_Smaller.JPG" media="(max-width:767px)">
-          <img src="https://github.com/rcfresh/Portfolio-Site/blob/master/img/Russell.JPG" alt="My Image">
+          <source srcset="https://i.ibb.co/cv47hk6/Russell-Smaller.jpg" media="(max-width:767px)">
+          <img src="https://i.ibb.co/sqKQ1Rw/Russell.jpg" alt="My Image">
         </picture>
         <div class="row">
           <div class="column col-md-6 col-lg-7">
