--- a/taxpert.html
+++ b/taxpert.html
@@ -36,8 +36,8 @@
     <div class="container">
       <div class="row">
         <picture>
-          <source srcset="img/Taxpert/taxpert_smaller.JPG" media="(max-width:767px)">
-          <img src="img/Taxpert/taxpert.JPG" alt="My Image">
+          <source srcset="https://i.ibb.co/q5LvfH7/taxpert-smaller.jpg" media="(max-width:767px)">
+          <img src="https://i.ibb.co/YPj5gB8/taxpert.jpg" alt="My Image">
         </picture>
         <div>
           <div class="column col-md-6 col-lg-7">
