--- a/freshtools.html
+++ b/freshtools.html
@@ -36,8 +36,8 @@
     <div class="container">
       <div class="row">
         <picture>
-          <source srcset="img/Fresh/freshtools_smaller.JPG" media="(max-width:767px)">
-          <img src="img/Fresh/freshtools.JPG" alt="My Image">
+          <source srcset="https://i.ibb.co/khv0MYp/freshtools-smaller.jpg" media="(max-width:767px)">
+          <img src="https://i.ibb.co/fdh7nzS/freshtools.jpg" alt="My Image">
         </picture>
         <div>
           <div class="column col-md-6 col-lg-7">
