Correcting image paths

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
           <div class="row">
             <div class="column col-md-6 col-lg-7">
               <picture class="paddedImg">
-                <source srcset="https://github.com/rcfresh/Portfolio-Site/blob/master/img/Fresh/freshtools_smaller.jpg" media="(max-width:767px)">
-                <img src="https://github.com/rcfresh/Portfolio-Site/blob/master/img/Fresh/freshtools.jpg" alt="My Image">
+                <source srcset="https://i.ibb.co/khv0MYp/freshtools-smaller.jpg" media="(max-width:767px)">
+                <img src="https://i.ibb.co/fdh7nzS/freshtools.jpg" alt="My Image">
               </picture>
             </div>
             <div class="column col-md-6 col-lg-5">
@@ -59,8 +59,8 @@
           <div class="row">
             <div class="column col-md-6 col-lg-7">
               <picture class="paddedImg">
-                <source srcset="https://github.com/rcfresh/Portfolio-Site/blob/master/img/Taxpert/taxpert_smaller.JPG" media="(max-width:767px)">
-                <img src="https://github.com/rcfresh/Portfolio-Site/blob/master/img/Taxpert/Taxpert.JPG" alt="My Image">
+                <source srcset="https://i.ibb.co/q5LvfH7/taxpert-smaller.jpg" media="(max-width:767px)">
+                <img src="https://i.ibb.co/YPj5gB8/taxpert.jpg" alt="My Image">
               </picture>
             </div>
             <div class="column col-md-6 col-lg-5">
